--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/googlemaps": "^3.39.4",
     "typescript": "^3.7.5"
   },
   "scripts": {
