--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/googlemaps": "^3.39.4",
-    "typescript": "^3.7.5"
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
